--- a/styles.css
+++ b/styles.css
@@ -219,11 +219,12 @@ gap: 32px;
 .section-content-des{
   width: 468px;
   color: #0D1321;
-font-family: "Azeret Mono";
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: 26px; /* 162.5% */
+  font-family: "Azeret Mono";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px; /* 162.5% */
+
 }
 
 .section-content-btn{
@@ -341,7 +342,6 @@ margin-top: 151px;
   flex-direction: column;
   align-items: flex-start;
   gap: 32px;
-
   border-radius: 16px;
 background: rgba(255, 76, 30, 0.05);
 
@@ -356,7 +356,7 @@ background: rgba(255, 76, 30, 0.05);
   align-items: flex-start;
   gap: 32px;
   border-radius: 16px;
-background: rgba(0, 76, 232, 0.05);
+  background: rgba(0, 76, 232, 0.05); 
 
 }
 
@@ -368,8 +368,7 @@ background: rgba(0, 76, 232, 0.05);
   align-items: flex-start;
   gap: 32px;
   border-radius: 16px;
-background: rgba(255, 223, 0, 0.05);
-
+  background: rgba(255, 223, 0, 0.05);
 }
 
 .skill-title{
@@ -417,6 +416,7 @@ background: #FFF;
 
 .content {
   flex: 1;
+  gap: 24px;
 
 }
 
@@ -453,4 +453,120 @@ text-decoration-line: underline;
 .content a:hover {
   color: #007BFF;
   border-bottom-color: #007BFF;
+}
+
+.support{
+  display: flex;
+  width: 1140px;
+  padding: 64px 48px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 32px;
+  border-radius: 16px;
+  background-image: url(assets/handshake.jpg);
+  align-items: center;
+}
+
+.support-title{
+  color: #FFF;
+text-align: center;
+font-family: "Azeret Mono";
+font-size: 32px;
+font-style: normal;
+font-weight: 700;
+line-height: 36px; /* 112.5% */
+}
+
+.support-des{
+  width: 606px;
+  color: #FFF;
+  text-align: center;
+  font-family: "Azeret Mono";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px; /* 162.5% */
+  opacity: 0.7;
+}
+
+.feedback-textarea{
+  display: flex;
+width: 548px;
+padding: 19px 20px;
+align-items: center;
+gap: 10px;
+border-radius: 8px;
+border: 1px solid rgba(13, 19, 33, 0.15);
+background: #FFF;
+}
+
+.feedback-container{
+  margin-top: 80px;
+  display: flex;
+align-items: flex-start;
+gap: 16px;
+}
+
+.feedback-text{
+  color: rgba(13, 19, 33, 0.40);
+text-align: center;
+font-family: "Azeret Mono";
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+
+.submit-button{
+  display: flex;
+width: 120px;
+padding: 17px 20px;
+justify-content: center;
+align-items: center;
+gap: 10px;
+border-radius: 8px;
+background: #FFF;
+flex: 1 0 0;
+color: #0D1321;
+text-align: center;
+font-family: "Azeret Mono";
+font-size: 20px;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+
+}
+
+.footer-container{
+  display: flex;
+width: 1440px;
+padding: 32px 150px;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+gap: 32px;
+border-radius: 16px;
+background: rgba(13, 19, 33, 0.03);
+
+}
+
+.footer-elements{
+  display: flex;
+justify-content: space-between;
+align-items: center;
+align-self: stretch;
+}
+
+.footer-heading{
+  color: #0D1321;
+text-align: center;
+font-family: "Azeret Mono";
+font-size: 20px;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+}
+
+.social-links a{
+  margin-right: 25px;
 }
